--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Code written while revising the basics of Typescript",
   "main": "src/index.ts",
   "scripts": {
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "watch": "tsc --watch"
   },
   "repository": {
     "type": "git",
